[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot61_namo"
version = "0.0.1"
authors = [
  { name="Namo", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

