[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot61"
version = "0.0.1"
authors = [
  { name="Namo", email="author@example.com" },
]
description = "A library for plotting ADCIRC output"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

